# boatsim

./: CMakeLists.txt  NMEA2000_SocketCAN.h  README.md  run.sh
docs/: DEVELOPMENT.md
lib/: CMakeLists.txt
lib/NMEA/: CMakeLists.txt
lib/NMEA/include/: NMEA.hpp  State.hpp
lib/NMEA/src/: NMEA.cpp
qml/: Card.qml  Main.qml
src/: BoatController.cpp  BoatController.hpp  main.cpp
